.kubernetes/fe-samples/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-samples
  labels:
    app: fe-samples
spec:
  type: ClusterIP
  selector:
    app: fe-samples
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 8080
