.kubernetes/fe-samples/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fe-samples-app
spec:
